<?xml version="1.0" encoding="utf-8"?>
<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">

    <string name="app_name">iTrack</string>
    <string name="well_plate_selection">Select well plate type</string>
    <string name="well_96">  96-Well Plate   </string>
    <string name="well_384">  384-Well Plate  </string>
    <!-- 20131211 modified by michael -->
    <string name="btn_caption_enter_itracker">Enter I_tracker</string>
    <string name="btn_caption_exit_itracker">Exit</string>
    <string name="btn_caption_logfile_itracker">Log File</string>
    
    <color name="caption_blue">#0000ff</color>
    <string name="hello_appwidget">Hello App Widgets!</string>
    <string name="appwidget_name">TGenius Tracking System</string>
    <string name="advertise_appwidget1">Tiangen Biotech</string>
    <string name="advertise_appwidget2">Smart Lab Bench</string>
    <string name="ad2_hyperlink">www.smartlabbench.com</string>
    
    <!-- 20140211 added by michael 
    some preference string -->
    <string name="preference_pipetting_mode">Pipetting Detection Mode：</string>
    <string name="ok_button_caption">OK</string>
    <string name="cancel_button_caption">Cancel</string>
    <string name="checkbox_caption">Adjust pipetting detection sensitivity</string>
    
    <string name="i_track_utility_activity_name">iTrack Utility</string>
    <string name="user_manual_link">http://www.maestrogen.com/ftp/i-track/user_manual.html</string>
</resources>